<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Gagal Memuat Model</string>
    <string name="empty_image_warning">Tidak Ada Gambar yang Dipilih</string>
    <string name="no_results">Tidak Ada Hasil</string>
    <string name="result_label">Hasil Analisis</string>
    <string name="deteksi_kanker">Deteksi kanker</string>
    <string name="confidence">Confidence</string>
    <string name="label">Label</string>
    <string name="image_result">Image Result</string>
    <string name="image">Image</string>
</resources>