<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deteksi_kanker"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:textColor="@color/primaryColor"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <ImageView
                android:id="@+id/resultImage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_place_holder" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_label"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/statText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:text="@string/label"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/persentase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:text="@string/confidence"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>